# thepornator_dj

./: .gitignore  .pre-commit-config.yaml  README.md  compose  restore-bd  restore-mysql  ruff.toml
application/: .dockerignore  check_i18n.sh  entrypoint.sh  pyproject.toml  requirements.txt
application/apps/ads/: admin.py  urls.py  views.py
application/apps/ai_pictures/: admin.py  sitemap.py  translation.py  urls.py  views.py
application/apps/ai_videos/: urls.py
application/apps/blog/: admin.py  sitemap.py  translation.py  urls.py  views.py
application/apps/contact/: admin.py  forms.py  urls.py  views.py
application/apps/glossary/: admin.py  sitemap.py  translation.py  urls.py  views.py
application/apps/home/: urls.py  views.py
application/apps/pages/: sitemap.py  urls.py  views.py
application/apps/porn_models/: admin.py  sitemap.py  translation.py  urls.py  views.py
application/apps/scripts/: admin.py  sitemap.py  urls.py  views.py
application/apps/statistics/: urls.py  views.py
application/apps/stories/: admin.py  sitemap.py  translation.py  urls.py  views.py
application/apps/surveys/: admin.py  translation.py  urls.py  views.py
application/apps/trends/: admin.py  sitemap.py  urls.py  views.py
application/apps/videos/: admin.py  sitemap.py  translation.py  urls.py
application/apps/websites/: admin.py  sitemap.py  translation.py  urls.py  views.py
application/home/: urls.py  views.py
application/project/: asgi.py  settings.py  urls.py
application/templates/: 404.html  base.html  index.html  robots.txt
src/: entrypoint.sh  (+1 more)
(+318 files in other folders)
